<resources>
    <string name="app_name">Mi calculadora V2</string>
    <string name="valor">Ingrese un numero</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="Dividir">Dividir</string>
    <string name="Calcular">Calcular</string>
    <string name="resultado">Resultado: </string>
</resources>